[gd_scene load_steps=16 format=2]

[ext_resource path="res://HouseTileset.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/Worlds/House/HouseShapes/SE_3x2.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Worlds/House/V.1.35-RandomGenHouse.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Worlds/House/Nav2D.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Worlds/House/HouseRooms/S-E_RightAngle.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Worlds/House/HouseRooms/Zig_NW-S.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Worlds/House/HouseRooms/N-E_RightAngle.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Worlds/House/HouseShapes/Square_4x2.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Worlds/House/HouseRooms/Cross.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Worlds/House/HouseRooms/SquareSpace_SW-E.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Worlds/House/HouseRooms/N-W_RightAngle.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Worlds/House/HouseRooms/S-W_RightAngle.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Worlds/House/HouseShapes/Hor_4x1.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/UI/PlayerGhost.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Worlds/House/HouseRooms/TestRoom.tscn" type="PackedScene" id=15]

[node name="House" type="Node2D"]
script = ExtResource( 3 )

[node name="Nav2D" type="Navigation2D" parent="."]
script = ExtResource( 4 )

[node name="Floor" type="TileMap" parent="Nav2D"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 9, 0, 1, 9, 1, 2, 9, 0, 3, 9, 1, 4, 9, 0, 5, 9, 1, 6, 9, 0, 7, 9, 1, 8, 9, 0, 9, 9, 1, 10, 9, 0, 11, 9, 1, 12, 9, 0, 13, 9, 1, 14, 9, 0, 15, 9, 1, 16, 9, 0, 17, 9, 1, 18, 9, 0, 19, 9, 1, 65536, 9, 65536, 65537, 9, 65537, 65538, 9, 65536, 65539, 9, 65537, 65540, 9, 65536, 65541, 9, 65537, 65542, 9, 65536, 65543, 9, 65537, 65544, 9, 65536, 65545, 9, 65537, 65546, 9, 65536, 65547, 9, 65537, 65548, 9, 65536, 65549, 9, 65537, 65550, 9, 65536, 65551, 9, 65537, 65552, 9, 65536, 65553, 9, 65537, 65554, 9, 65536, 65555, 9, 65537, 131072, 9, 0, 131073, 9, 1, 131074, 9, 0, 131075, 9, 1, 131076, 9, 0, 131077, 9, 1, 131078, 9, 0, 131079, 9, 1, 131080, 9, 0, 131081, 9, 1, 131082, 9, 0, 131083, 9, 1, 131084, 9, 0, 131085, 9, 1, 131086, 9, 0, 131087, 9, 1, 131088, 9, 0, 131089, 9, 1, 131090, 9, 0, 131091, 9, 1, 196608, 9, 65536, 196609, 9, 65537, 196610, 9, 65536, 196611, 9, 65537, 196612, 9, 65536, 196613, 9, 65537, 196614, 9, 65536, 196615, 9, 65537, 196616, 9, 65536, 196617, 9, 65537, 196618, 9, 65536, 196619, 9, 65537, 196620, 9, 65536, 196621, 9, 65537, 196622, 9, 65536, 196623, 9, 65537, 196624, 9, 65536, 196625, 9, 65537, 196626, 9, 65536, 196627, 9, 65537, 262144, 9, 0, 262145, 9, 1, 262146, 9, 0, 262147, 9, 1, 262148, 9, 0, 262149, 9, 1, 262150, 9, 0, 262151, 9, 1, 262152, 9, 0, 262153, 9, 1, 262154, 9, 0, 262155, 9, 1, 262156, 9, 0, 262157, 9, 1, 262158, 9, 0, 262159, 9, 1, 262160, 9, 0, 262161, 9, 1, 262162, 9, 0, 262163, 9, 1, 327680, 9, 65536, 327681, 9, 65537, 327682, 9, 65536, 327683, 9, 65537, 327684, 9, 65536, 327685, 9, 65537, 327686, 9, 65536, 327687, 9, 65537, 327688, 9, 65536, 327689, 9, 65537, 327690, 9, 65536, 327691, 9, 65537, 327692, 9, 65536, 327693, 9, 65537, 327694, 9, 65536, 327695, 9, 65537, 327696, 9, 65536, 327697, 9, 65537, 327698, 9, 65536, 327699, 9, 65537, 393216, 9, 0, 393217, 9, 1, 393218, 9, 0, 393219, 9, 1, 393220, 9, 0, 393221, 9, 1, 393222, 9, 0, 393223, 9, 1, 393224, 9, 0, 393225, 9, 1, 393226, 9, 0, 393227, 9, 1, 393228, 9, 0, 393229, 9, 1, 393230, 9, 0, 393231, 9, 1, 393232, 9, 0, 393233, 9, 1, 393234, 9, 0, 393235, 9, 1, 458752, 9, 65536, 458753, 9, 65537, 458754, 9, 65536, 458755, 9, 65537, 458756, 9, 65536, 458757, 9, 65537, 458758, 9, 65536, 458759, 9, 65537, 458760, 9, 65536, 458761, 9, 65537, 458762, 9, 65536, 458763, 9, 65537, 458764, 9, 65536, 458765, 9, 65537, 458766, 9, 65536, 458767, 9, 65537, 458768, 9, 65536, 458769, 9, 65537, 458770, 9, 65536, 458771, 9, 65537, 524288, 9, 0, 524289, 9, 1, 524290, 9, 0, 524291, 9, 1, 524292, 9, 0, 524293, 9, 1, 524294, 9, 0, 524295, 9, 1, 524296, 9, 0, 524297, 9, 1, 524298, 9, 0, 524299, 9, 1, 524300, 9, 0, 524301, 9, 1, 524302, 9, 0, 524303, 9, 1, 524304, 9, 0, 524305, 9, 1, 524306, 9, 0, 524307, 9, 1, 589824, 9, 65536, 589825, 9, 65537, 589826, 9, 65536, 589827, 9, 65537, 589828, 9, 65536, 589829, 9, 65537, 589830, 9, 65536, 589831, 9, 65537, 589832, 9, 65536, 589833, 9, 65537, 589834, 9, 65536, 589835, 9, 65537, 589836, 9, 65536, 589837, 9, 65537, 589838, 9, 65536, 589839, 9, 65537, 589840, 9, 65536, 589841, 9, 65537, 589842, 9, 65536, 589843, 9, 65537, 655360, 9, 0, 655361, 9, 1, 655362, 9, 0, 655363, 9, 1, 655364, 9, 0, 655365, 9, 1, 655366, 9, 0, 655367, 9, 1, 655368, 9, 0, 655369, 9, 1, 655370, 9, 0, 655371, 9, 1, 655372, 9, 0, 655373, 9, 1, 655374, 9, 0, 655375, 9, 1, 655376, 9, 0, 655377, 9, 1, 655378, 9, 0, 655379, 9, 1, 720896, 9, 65536, 720897, 9, 65537, 720898, 9, 65536, 720899, 9, 65537, 720900, 9, 65536, 720901, 9, 65537, 720902, 9, 65536, 720903, 9, 65537, 720904, 9, 65536, 720905, 9, 65537, 720906, 9, 65536, 720907, 9, 65537, 720908, 9, 65536, 720909, 9, 65537, 720910, 9, 65536, 720911, 9, 65537, 720912, 9, 65536, 720913, 9, 65537, 720914, 9, 65536, 720915, 9, 65537, 786432, 9, 0, 786433, 9, 1, 786434, 9, 0, 786435, 9, 1, 786436, 9, 0, 786437, 9, 1, 786438, 9, 0, 786439, 9, 1, 786440, 9, 0, 786441, 9, 1, 786442, 9, 0, 786443, 9, 1, 786444, 9, 0, 786445, 9, 1, 786446, 9, 0, 786447, 9, 1, 786448, 9, 0, 786449, 9, 1, 786450, 9, 0, 786451, 9, 1, 851968, 9, 65536, 851969, 9, 65537, 851970, 9, 65536, 851971, 9, 65537, 851972, 9, 65536, 851973, 9, 65537, 851974, 9, 65536, 851975, 9, 65537, 851976, 9, 65536, 851977, 9, 65537, 851978, 9, 65536, 851979, 9, 65537, 851980, 9, 65536, 851981, 9, 65537, 851982, 9, 65536, 851983, 9, 65537, 851984, 9, 65536, 851985, 9, 65537, 851986, 9, 65536, 851987, 9, 65537, 917504, 9, 0, 917505, 9, 1, 917506, 9, 0, 917507, 9, 1, 917508, 9, 0, 917509, 9, 1, 917510, 9, 0, 917511, 9, 1, 917512, 9, 0, 917513, 9, 1, 917514, 9, 0, 917515, 9, 1, 917516, 9, 0, 917517, 9, 1, 917518, 9, 0, 917519, 9, 1, 917520, 9, 0, 917521, 9, 1, 917522, 9, 0, 917523, 9, 1, 983040, 9, 65536, 983041, 9, 65537, 983042, 9, 65536, 983043, 9, 65537, 983044, 9, 65536, 983045, 9, 65537, 983046, 9, 65536, 983047, 9, 65537, 983048, 9, 65536, 983049, 9, 65537, 983050, 9, 65536, 983051, 9, 65537, 983052, 9, 65536, 983053, 9, 65537, 983054, 9, 65536, 983055, 9, 65537, 983056, 9, 65536, 983057, 9, 65537, 983058, 9, 65536, 983059, 9, 65537, 1048576, 9, 0, 1048577, 9, 1, 1048578, 9, 0, 1048579, 9, 1, 1048580, 9, 0, 1048581, 9, 1, 1048582, 9, 0, 1048583, 9, 1, 1048584, 9, 0, 1048585, 9, 1, 1048586, 9, 0, 1048587, 9, 1, 1048588, 9, 0, 1048589, 9, 1, 1048590, 9, 0, 1048591, 9, 1, 1048592, 9, 0, 1048593, 9, 1, 1048594, 9, 0, 1048595, 9, 1, 1114112, 9, 65536, 1114113, 9, 65537, 1114114, 9, 65536, 1114115, 9, 65537, 1114116, 9, 65536, 1114117, 9, 65537, 1114118, 9, 65536, 1114119, 9, 65537, 1114120, 9, 65536, 1114121, 9, 65537, 1114122, 9, 65536, 1114123, 9, 65537, 1114124, 9, 65536, 1114125, 9, 65537, 1114126, 9, 65536, 1114127, 9, 65537, 1114128, 9, 65536, 1114129, 9, 65537, 1114130, 9, 65536, 1114131, 9, 65537, 1179648, 9, 0, 1179649, 9, 1, 1179650, 9, 0, 1179651, 9, 1, 1179652, 9, 0, 1179653, 9, 1, 1179654, 9, 0, 1179655, 9, 1, 1179656, 9, 0, 1179657, 9, 1, 1179658, 9, 0, 1179659, 9, 1, 1179660, 9, 0, 1179661, 9, 1, 1179662, 9, 0, 1179663, 9, 1, 1179664, 9, 0, 1179665, 9, 1, 1179666, 9, 0, 1179667, 9, 1, 1245184, 9, 65536, 1245185, 9, 65537, 1245186, 9, 65536, 1245187, 9, 65537, 1245188, 9, 65536, 1245189, 9, 65537, 1245190, 9, 65536, 1245191, 9, 65537, 1245192, 9, 65536, 1245193, 9, 65537, 1245194, 9, 65536, 1245195, 9, 65537, 1245196, 9, 65536, 1245197, 9, 65537, 1245198, 9, 65536, 1245199, 9, 65537, 1245200, 9, 65536, 1245201, 9, 65537, 1245202, 9, 65536, 1245203, 9, 65537 )

[node name="Walls" type="TileMap" parent="Nav2D"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_tile_origin = 2
cell_y_sort = true
collision_layer = 32
collision_mask = 3
format = 1

[node name="PlayerGhost" parent="Nav2D/Walls" instance=ExtResource( 14 )]
visible = false

[node name="PathContainer" type="Node2D" parent="Nav2D/Walls"]

[node name="Area" type="TileMap" parent="Nav2D"]
visible = false
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
collision_layer = 2147483648
collision_mask = 0
format = 1

[node name="Indexes" type="TileMap" parent="Nav2D"]
visible = false
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1

[node name="HouseRooms" type="Node2D" parent="."]
visible = false
position = Vector2( -640, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Cross" parent="HouseRooms" instance=ExtResource( 9 )]
openings = {
"east": true,
"north": true,
"northeast_east": false,
"northeast_north": false,
"northwest_north": false,
"northwest_west": false,
"south": true,
"southeast_east": false,
"southeast_south": false,
"southwest_south": false,
"southwest_west": false,
"west": true
}

[node name="RightAngle" type="Node2D" parent="HouseRooms"]

[node name="N-E_RightAngle" parent="HouseRooms/RightAngle" instance=ExtResource( 7 )]
openings = {
"east": true,
"north": true,
"northeast_east": false,
"northeast_north": false,
"northwest_north": false,
"northwest_west": false,
"south": false,
"southeast_east": false,
"southeast_south": false,
"southwest_south": false,
"southwest_west": false,
"west": false
}

[node name="N-W_RightAngle" parent="HouseRooms/RightAngle" instance=ExtResource( 11 )]
openings = {
"east": false,
"north": true,
"northeast_east": false,
"northeast_north": false,
"northwest_north": false,
"northwest_west": false,
"south": false,
"southeast_east": false,
"southeast_south": false,
"southwest_south": false,
"southwest_west": false,
"west": true
}

[node name="S-E_RightAngle" parent="HouseRooms/RightAngle" instance=ExtResource( 5 )]
openings = {
"east": true,
"north": false,
"northeast_east": false,
"northeast_north": false,
"northwest_north": false,
"northwest_west": false,
"south": true,
"southeast_east": false,
"southeast_south": false,
"southwest_south": false,
"southwest_west": false,
"west": false
}

[node name="S-W_RightAngle" parent="HouseRooms/RightAngle" instance=ExtResource( 12 )]
openings = {
"east": false,
"north": false,
"northeast_east": false,
"northeast_north": false,
"northwest_north": false,
"northwest_west": false,
"south": true,
"southeast_east": false,
"southeast_south": false,
"southwest_south": false,
"southwest_west": false,
"west": true
}

[node name="SquareSpace_SW-E" parent="HouseRooms" instance=ExtResource( 10 )]
openings = {
"east": true,
"north": false,
"northeast_east": false,
"northeast_north": false,
"northwest_north": false,
"northwest_west": false,
"south": true,
"southeast_east": false,
"southeast_south": false,
"southwest_south": true,
"southwest_west": true,
"west": true
}

[node name="Zig_NW-S" parent="HouseRooms" instance=ExtResource( 6 )]
openings = {
"east": false,
"north": false,
"northeast_east": false,
"northeast_north": false,
"northwest_north": true,
"northwest_west": false,
"south": true,
"southeast_east": false,
"southeast_south": false,
"southwest_south": false,
"southwest_west": false,
"west": false
}

[node name="TestRoom" parent="HouseRooms" instance=ExtResource( 15 )]
openings = {
"east": true,
"north": false,
"northeast_east": false,
"northeast_north": false,
"northwest_north": true,
"northwest_west": false,
"south": true,
"southeast_east": false,
"southeast_south": false,
"southwest_south": false,
"southwest_west": false,
"west": false
}

[node name="HouseShapes" type="Node2D" parent="."]
visible = false

[node name="Square_4x2" parent="HouseShapes" instance=ExtResource( 8 )]
position = Vector2( 640, 0 )

[node name="SE_3x2" parent="HouseShapes" instance=ExtResource( 2 )]
position = Vector2( 640, 0 )

[node name="Hor_4x1" parent="HouseShapes" instance=ExtResource( 13 )]
position = Vector2( 640, 0 )
